tests/baselines/reference/ES5For-of12.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of12.ts(1,6): error TS2461: Type 'undefined' is not an array type.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of12.ts (1 errors) ====
    for ([""] of []) { }
         ~~~~
!!! error TS2461: Type 'undefined' is not an array type.